<resources>
    <string name="app_name">Cashback</string>
    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="title_scanner">Scanner</string>
    <string name="title_offers">Offers</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>