<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_explore" />

    <item
        android:id="@+id/navigation_scanner"
        android:icon="@drawable/ic_scanner_24"
        android:title="@string/title_scanner" />
    <item
        android:id="@+id/navigation_offers"
        android:icon="@drawable/ic_offer_24"
        android:title="@string/title_offers" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_outline_24"
        android:title="@string/title_profile" />

</menu>