<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.cashback.test.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.cashback.test.ui.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/navigation_scanner"
        android:name="com.cashback.test.ui.scanner.ScannerFragment"
        android:label="@string/title_scanner"
        tools:layout="@layout/fragment_offers" />
    <fragment
        android:id="@+id/navigation_offers"
        android:name="com.cashback.test.ui.offers.OffersFragment"
        android:label="@string/title_offers"
        tools:layout="@layout/fragment_offers" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.cashback.test.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>